--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,11 @@
         </li>
         <li role="presentation"
             routerLinkActive="active">
-          <a routerLink="/servers">Servers</a>
+          <a routerLink="servers">Servers</a>
         </li>
         <li role="presentation"
             routerLinkActive="active">
-          <a [routerLink]="['/users']">Users</a>
+          <a [routerLink]="['users']">Users</a>
         </li>
       </ul>
     </div>
